Added checklist and missing addendum, fixed tests and other bug fixes.

--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -115,7 +115,8 @@ code: |
     nav.set_section(f"users_{idx}_signpost_app")
     if user.application_is_approved:
       user.signpost
-      user.is_first_TPS_application
+      if application_kind == "ead_and_tps":
+        user.is_first_TPS_application
       if user.age_in_years() < 14:
         user.parent
       user.user_reads_english
@@ -941,6 +942,12 @@ objects:
   - users[i].ead_interim_parole_addendum: ALDocument.using(title=f"{users[i]} - EAD Interim Parole Addendum", filename=space_to_underscore(f"{users[i]} - EAD Interim Parole Addendum"), has_addendum=False)
 ---
 objects:
+  - users[i].ead_asylum_checklist: ALDocument.using(title=f"{users[i]} - EAD Interim Parole Addendum", filename=space_to_underscore(f"{users[i]} - EAD Application Checklist for Category C08"), has_addendum=False)
+---
+objects:
+  - users[i].ead_addendum_osup: ALDocument.using(title=f"{users[i]} - EAD Interim Parole Addendum", filename=space_to_underscore(f"{users[i]} - EAD Order of Supervision Addendum"), has_addendum=False)
+---
+objects:
   - users[i].ead_legal_screener: ALDocument.using(title=f"{users[i]} - EAD Legal Screener", filename=space_to_underscore(f"{users[i]} - EAD Legal Screener"), has_addendum=False)
 ---
 objects:
@@ -986,6 +993,8 @@ objects:
         users[i].fee_waiver_tps,
         users[i].i_765_attachment,
         users[i].ead_interim_parole_addendum,
+        users[i].ead_order_of_supervision_addendum,
+        users[i].ead_asylum_checklist,
         users[i].fee_waiver_ead,
         users[i].ending_page,
       ])
@@ -1022,6 +1031,12 @@ code: |
 ---
 code: |
   users[i].ead_interim_parole_addendum.enabled = users[i].application_is_approved and (application_kind == "ead_only") and users[i].addenda["ead_interim_parole"]
+---
+code: |
+  users[i].ead_addendum_osup.enabled = users[i].application_is_approved and (application_kind == "ead_only") and users[i].addenda["ead_order_of_supervision"]
+---
+code: |
+  users[i].ead_asylum_checklist.enabled = users[i].application_is_approved and (application_kind == "ead_only") and (users[i].eligibility_category == "ead_asylum")
 ---
 attachment:
   variable name: users[i].military_service_addendum[j]
@@ -1070,6 +1085,20 @@ attachment:
   name: ${ users[i] } - EAD Interim Parole Addendum
   filename: ${ space_to_underscore(f"{users[i]} - EAD Interim Parole Addendum") }
   docx template file: EAD_addendum_interim_parole.docx
+  skip undefined: True
+---
+attachment:
+  variable name: users[i].ead_asylum_checklist[j]
+  name: ${ users[i] } - EAD Application Checklist for Category C08 
+  filename: ${ space_to_underscore(f"{users[i]} - EAD Application Checklist for Category C08") }
+  docx template file: EAD_asylum_checklist.docx
+  skip undefined: True
+---
+attachment:
+  variable name: users[i].ead_addendum_osup[j]
+  name: ${ users[i] } - EAD Order of Supervision Addendum
+  filename: ${ space_to_underscore(f"{users[i]} - EAD Order of Supervision Addendum") }
+  docx template file: EAD_addendum_osup.docx
   skip undefined: True
 ---
 code: |
