--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -105,11 +105,8 @@ fields:
     datatype: ThreePartsDate
     alMax: ${ today().format("yyyy-MM-dd") }
     show if: users[i].in_removal_proceedings
-  - "Do you have a copy of the order of supervision? Ex: Form I-220B": users[i].order_of_supervision
+  - "Do you have an order of supervision? Ex: Form I-220B": users[i].order_of_supervision
     datatype: yesnoradio
-    show if:
-      variable: users[i].eligibility_category
-      is: ead_supervision
     default: |
       ${ showifdef("users[0].order_of_supervision") if i > 0 else '' }
   - Do you have copies of supporting documents for work authorization?: users[i].osup_documents
@@ -182,9 +179,7 @@ subquestion: |
     % endif
     % endif
     <li>Are you in removal proceedings right now?: ${ 'Yes' if user.in_removal_proceedings else 'No' }</li>
-    % if user.eligibility_category == "ead_supervision":
-    <li>Do you have a copy of the order of supervision?: ${ 'Yes' if user.order_of_supervision else 'No' }</li>
-    % endif
+    <li>Do you have an order of supervision?: ${ 'Yes' if user.order_of_supervision else 'No' }</li>
     % if user.in_removal_proceedings and user.ever_ordered_removed:
     <li style="background-color: #ffff00; color: #000;"><i class="fas fa-exclamation-triangle"></i>${ user } has been ordered removed</li>
     % else:
