--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -2070,7 +2070,10 @@ attachment:
         % if interpreter.address.address:
         ${ interpreter.address.address }
         % endif
-    - "interpreter_mailing_address_unit": ''
+    - "interpreter_mailing_address_unit": |
+        % if interpreter.address.unit:
+        ${ interpreter.address.unit }
+        % endif
     - "interpreter_mailing_address_city": |
         % if interpreter.address.city:
         ${ interpreter.address.city }
@@ -2102,7 +2105,10 @@ attachment:
         % if preparer.address.address:
         ${ preparer.address.address }
         % endif
-    - "preparer_mailing_address_unit": ''
+    - "preparer_mailing_address_unit": |
+        % if preparer.address.unit:
+        ${ preparer.address.unit }
+        % endif
     - "preparer_mailing_address_city": |
         % if preparer.address.city:
         ${ preparer.address.city }
@@ -2312,7 +2318,10 @@ attachment:
         % if interpreter.address.address:
         ${ interpreter.address.address }
         % endif
-    - "interpreter_mailing_address_unit": ''
+    - "interpreter_mailing_address_unit": |
+        % if interpreter.address.unit:
+        ${ interpreter.address.unit }
+        % endif
     - "interpreter_mailing_address_city": |
         % if interpreter.address.city:
         ${ interpreter.address.city }
@@ -2337,7 +2346,10 @@ attachment:
         % if preparer.address.address:
         ${ preparer.address.address }
         % endif
-    - "preparer_mailing_address_unit": ''
+    - "preparer_mailing_address_unit": |
+        % if preparer.address.unit:
+        ${ preparer.address.unit }
+        % endif
     - "preparer_mailing_address_city": |
         % if preparer.address.city:
         ${ preparer.address.city }
