--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -74,6 +74,7 @@ code: |
     interpreter.name.first
   preparer.name.first
   preparer_is_attorney
+  preparer.address.address
   users.gather()
   review_initial_user_list
   nav.set_section("section_retainer")
@@ -293,26 +294,49 @@ id: preparer name interpreter present
 question: |
   Who is the volunteer/preparer assisting the applicant(s) with this application?
 fields:
-  - Someone already named: preparer
+  - Preparer is: preparer
     datatype: object_radio
     none of the above: Someone else
     disable others:
       - preparer.name.first
       - preparer.name.middle
       - preparer.name.last
+    choices: |
+      [signed_in_user, interpreter] if user_logged_in() and interpreter_present else [signed_in_user] if user_logged_in() else [interpreter] if interpreter_present else []
+  - note: |
+      <h2 class="h4">Preparer's Name</h2>      
+  - code: |
+      preparer.name_fields(person_or_business="person", show_suffix=False,)
+  - Is the preparer an attorney or accredited representative?: preparer_is_attorney
+    datatype: yesnoradio
+---
+id: preparer address
+sets:
+  - preparer.address.address
+  - preparer.address.city
+  - preparer.address.state
+  - preparer.address.zip
+question: |
+  What address is the volunteer/preparer assisting the applicant(s) with this application?
+fields:
+  - Preparer address is: preparer.address
+    datatype: object_radio
+    choices:
+      - interpreter.address if defined("interpreter.address") else None
+    object labeler: |
+      lambda y: y.on_one_line()
+    none of the above: |
+      Somewhere else
+    disable others: 
       - preparer.address.address
       - preparer.address.unit
       - preparer.address.city
       - preparer.address.state
       - preparer.address.zip
-    choices: |
-      [signed_in_user, interpreter] if user_logged_in() and interpreter_present else [signed_in_user] if user_logged_in() else [interpreter] if interpreter_present else []
-  - code: |
-      preparer.name_fields(person_or_business="person", show_suffix=False,)
+  - note: |
+      <h2 class="h4">Preparer's Address</h2>
   - code: |
       preparer.address_fields(default_state="IL")
-  - Is the preparer an attorney or accredited representative?: preparer_is_attorney
-    datatype: yesnoradio
 ---
 id: people
 question: |
